Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3854

Memory leak with the headers in HTTP/2

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.0.0
    • HTTP/2

    Description

      Not destroying the MIMEhdr object for the dynamic tables:

      ==22595== 80 bytes in 1 blocks are definitely lost in loss record 1,592 of 2,204
      ==22595==    at 0x4C2AD85: memalign (in /usr/lib64/valgrind/vgpreload_memcheck-amd64-linux.so)
      ==22595==    by 0x4C2AE4D: posix_memalign (in /usr/lib64/valgrind/vgpreload_memcheck-amd64-linux.so)
      ==22595==    by 0x4E60D21: ats_memalign (ink_memory.cc:100)
      ==22595==    by 0x4E610AF: ink_freelist_new (ink_queue.cc:239)
      ==22595==    by 0x5FEEB3: alloc (Allocator.h:120)
      ==22595==    by 0x5FEEB3: new_ProxyMutex (I_Lock.h:555)
      ==22595==    by 0x5FEEB3: Http2ClientSession::new_connection(NetVConnection*, MIOBuffer*, IOBufferReader*, bool) (Http2ClientSession.cc:124)
      ==22595==    by 0x608AF0: Http2SessionAccept::accept(NetVConnection*, MIOBuffer*, IOBufferReader*) (Http2SessionAccept.cc:58)
      ==22595==    by 0x6089A0: Http2SessionAccept::mainEvent(int, void*) (Http2SessionAccept.cc:77)
      ==22595==    by 0x74133B: SSLNextProtocolTrampoline::ioCompletionEvent(int, void*) (SSLNextProtocolAccept.cc:99)
      ==22595==    by 0x75CD4F: handleEvent (I_Continuation.h:146)
      ==22595==    by 0x75CD4F: read_signal_and_update (UnixNetVConnection.cc:145)
      ==22595==    by 0x75CD4F: read_signal_done (UnixNetVConnection.cc:206)
      ==22595==    by 0x75CD4F: UnixNetVConnection::readSignalDone(int, NetHandler*) (UnixNetVConnection.cc:1006)
      ==22595==    by 0x73E101: SSLNetVConnection::net_read_io(NetHandler*, EThread*) (SSLNetVConnection.cc:540)
      ==22595==    by 0x74B889: NetHandler::mainNetEvent(int, Event*) (UnixNet.cc:516)
      ==22595==    by 0x7844FA: handleEvent (I_Continuation.h:146)
      ==22595==    by 0x7844FA: process_event (UnixEThread.cc:128)
      ==22595==    by 0x7844FA: EThread::execute() (UnixEThread.cc:252)
      

      Attachments

        Activity

          People

            bcall Bryan Call
            bcall Bryan Call
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: