TS-3854: Memory leak with the headers in HTTP/2